# cipher

./: .gitignore  README.md  pyproject.toml
.forgejo/workflows/: release.yml
src/cipher/: __init__.py  cli.py  crypto.py
src/file_cipher/: __init__.py  cli.py
