[project]
name = "file-cipher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GautierPicon", email = "bt2ay5d9@anonaddy.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
